--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -2,3 +2,18 @@
 =============== 
 
 Si el ping contesta mas rapido significa que ese servidor es mas rápido.
+
+binario = ejecutable
+
+apt-get install build-essential // instala comandos como gcc, make, etc.
+
+comando apt
+-------------
+funcion bajar una lista de repositorios
+
+more sources.list // muestra el contenido de la lista
+
+.deb es el binario y a su vez puedo agregarlo en source.list
+
+**apkg** se installan los .deb
+
