--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -17,3 +17,16 @@ more sources.list // muestra el contenido de la lista
 
 **apkg** se installan los .deb
 
+
+source.list
+------------
+
+tambien source.list.d // poner lista sin tocar el list original
+
+commo hago para actulizar la base de datos de paquetes? **apt-get update**
+
+**apt-get upgrade** // de lo que bajaste que paquete tengo para actualizar.
+
+apt-get update && **apt- upgrade -y** // para decir le que si de forma automatica
+
+
