--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -29,4 +29,8 @@ commo hago para actulizar la base de datos de paquetes? **apt-get update**
 
 apt-get update && **apt- upgrade -y** // para decir le que si de forma automatica
 
+**apt-get clean** // borrado me permite todo los archivos de: **/var/cache/apt/archives**
+
+
+
 
