--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -31,6 +31,8 @@ apt-get update && **apt- upgrade -y** // para decir le que si de forma automatic
 
 **apt-get clean** // borrado me permite todo los archivos de: **/var/cache/apt/archives**
 
+Searching - Pelicula (https://www.cinecalidad.to/pelicula/buscando-2018-online-descarga/)
 
+OSINT 
 
 
