--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -35,4 +35,18 @@ Searching - Pelicula (https://www.cinecalidad.to/pelicula/buscando-2018-online-d
 
 OSINT 
 
+apt-get check // 
+
+
+do-release-upgrade -d // permite pasar de una version a otra
+
+conviene hacer esto para pasar de una version a otra
+update
+upgrade
+dist-grade
+y por ultimo el do-release-upgrade -d
+
+
+
+
 
