--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -21,7 +21,7 @@ more sources.list // muestra el contenido de la lista
 source.list
 ------------
 
-tambien source.list.d // poner lista sin tocar el list original
+tambien **source.list.d** // poner lista sin tocar el list original
 
 commo hago para actulizar la base de datos de paquetes? **apt-get update**
 
@@ -35,16 +35,17 @@ Searching - Pelicula (https://www.cinecalidad.to/pelicula/buscando-2018-online-d
 
 OSINT 
 
-apt-get check // 
+**apt-get check** // 
 
 
-do-release-upgrade -d // permite pasar de una version a otra
+**do-release-upgrade -d** // permite pasar de una version a otra
 
 conviene hacer esto para pasar de una version a otra
-update
-upgrade
-dist-grade
-y por ultimo el do-release-upgrade -d
+**update**
+**upgrade**
+**dist-grade** y por ultimo el **do-release-upgrade -d**
+
+
 
 
 
