--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -46,7 +46,9 @@ conviene hacer esto para pasar de una version a otra
 **dist-grade** y por ultimo el **do-release-upgrade -d**
 
 
-
+**veracrypt** 
+https://www.veracrypt.fr/en/Downloads.html
+con este programa se puede encriptar la info importante del USB, por ejemplo....
 
 
 
