--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -50,6 +50,17 @@ conviene hacer esto para pasar de una version a otra
 https://www.veracrypt.fr/en/Downloads.html
 con este programa se puede encriptar la info importante del USB, por ejemplo....
 
+apt-cache // buscar sobre la base de datos que bajo.
+
+apt-cache search mc |  // mc significa = MIDNIGHT COMMANDER 
+
+apt-cache search wine
+
+apt-cache install wine64 mc
+
+apt-get --reinstall mc // reinstalar el paquete
+
+
 
 
 
