--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -60,7 +60,13 @@ apt-cache install wine64 mc
 
 apt-get --reinstall mc // reinstalar el paquete
 
-
+    _____^_(smart bump)
+   |    |    \
+    \   /  ^ |
+   / \_/   0  \
+  /            \
+ /    ____      0
+/      /  \___ _/
 
 
 
