--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -60,13 +60,5 @@ apt-cache install wine64 mc
 
 apt-get --reinstall mc // reinstalar el paquete
 
-    _____^_
-   |    |    \
-    \   /  ^ |
-   / \_/   0  \
-  /            \
- /    ____      0
-/      /  \___ _/
-
-
-
+   
+dpkg -L mc | more // me da la estructura del directorio
