--- a/08. repositorios.md
+++ b/08. repositorios.md
@@ -62,3 +62,15 @@ apt-get --reinstall mc // reinstalar el paquete
 
    
 dpkg -L mc | more // me da la estructura del directorio
+de cualquier paquete la estructura de directorio.
+
+which ls // donde esta el comando
+
+dpkg -S /bin/ls // muestra de que paquete depende
+
+dpkg -r mc // borrar paquetes
+
+dpkg --configure paquete ///configurara paquete 
+dpkg --configure -a // reconfigurar todo
+
+
